added missing files

--- a/src/app/fragen/frage1/frage1.component.html
+++ b/src/app/fragen/frage1/frage1.component.html
@@ -1,4 +1,4 @@
-Frage2: Zeichne dynamische webseiten:
+Frage1: Zeichne die vierschichtenarchitektur für webanwendungen:
 <br>
 <br>
 <form>
@@ -9,14 +9,17 @@ Frage2: Zeichne dynamische webseiten:
   <br>
   <button type="button" (click)="removelsg()">Lösung verbergen</button>
   <p>
-    <button routerLink="/frage3">Nächste Frage</button>
+    <button routerLink="/frage2">Nächste Frage</button>
     <button routerLink="/frage1" style="margin-left: 10px">Vorherige Frage</button>
     <button routerLink="/frage1" style="margin-left: 10px">Erste Frage</button>
   </p>
 
 </form>
 <pre id="lösung" style="display: none">
-  ablauf: client fordert HTTP request per URL, bekommt HTML page als response, daten aus DB</pre>
+  Visualisierung (client tier)	web browser		HTML, CSS, JS, ECMA, Angular
+Präsentation (presentation)	Web Server		Nodejs, Groovy & grails, JSP, JSF, Servlets
+Anwendungslogik (buisness)	Application Server	Java, Nodejs, Groovy
+Datenhaltung (ressource)	Datenbank Server	Sql, mariadb, mysql</pre>
 
 
 <div style="display: block"></div>
