--- a/src/app/fragen/frage3/frage3.component.html
+++ b/src/app/fragen/frage3/frage3.component.html
@@ -1,4 +1,4 @@
-Frage4: Was ist ECMAscript?
+Frage3: Was ist Javascript?
 <br>
 <br>
 <form>
@@ -9,17 +9,16 @@ Frage4: Was ist ECMAscript?
   <br>
   <button type="button" (click)="removelsg()">Lösung verbergen</button>
   <p>
-    <button routerLink="/frage5">Nächste Frage</button>
-    <button routerLink="/frage3" style="margin-left: 10px">Vorherige Frage</button>
+    <button routerLink="/frage4">Nächste Frage</button>
+    <button routerLink="/frage2" style="margin-left: 10px">Vorherige Frage</button>
     <button routerLink="/frage1" style="margin-left: 10px">Erste Frage</button>
   </p>
 
 </form>
 <pre id="lösung" style="display: none">
 
-European Computer Manufacturers Association
-spezifiziert Sprachkern von Javascript, stellt standard für alle browser dar, damit die gleiche seite auf unterschiedlichen browsern
-gleich aussieht. wird auch außerhalb des browsers verwendet, zb nodejs und typescript
+Programmiersprache des Browsers, wird verwendet um das DOM Document Object Model zu manipulieren, mit javascript kann man
+Web/mobile apps erstellen. Javascript kann man im Browser verwenden, oder mit node einen Webserver schreiben.
 
 </pre>
 
