--- a/src/app/fragen/frage5/frage3.component.html
+++ b/src/app/fragen/frage5/frage3.component.html
@@ -1,4 +1,4 @@
-Frage4: Was ist ECMAscript?
+Frage5: Was ist Typescript?
 <br>
 <br>
 <form>
@@ -9,15 +9,16 @@ Frage4: Was ist ECMAscript?
   <br>
   <button type="button" (click)="removelsg()">Lösung verbergen</button>
   <p>
-    <button routerLink="/frage5">Nächste Frage</button>
+    <button routerLink="/frage6">Nächste Frage</button>
+    <button routerLink="/frage4" style="margin-left: 10px">Vorherige Frage</button>
+    <button routerLink="/frage1" style="margin-left: 10px">Erste Frage</button>
   </p>
 
 </form>
 <pre id="lösung" style="display: none">
 
-European Computer Manufacturers Association
-spezifiziert Sprachkern von Javascript, stellt standard für alle browser dar, damit die gleiche seite auf unterschiedlichen browsern
-gleich aussieht. wird auch außerhalb des browsers verwendet, zb nodejs und typescript
+wird beim compelieren zu javascript, unterstützt objektorientierte programmierung und typsicherheit
+(klassen, vererbung, polymorphie, interfaces, enums, generics statische und dynamische datentypen)
 
 </pre>
 
