--- a/src/app/fragen/frage6/frage3.component.html
+++ b/src/app/fragen/frage6/frage3.component.html
@@ -1,4 +1,4 @@
-Frage5: Was ist Typescript?
+Frage6: Was ist Nodejs?
 <br>
 <br>
 <form>
@@ -9,16 +9,18 @@ Frage5: Was ist Typescript?
   <br>
   <button type="button" (click)="removelsg()">Lösung verbergen</button>
   <p>
-    <button routerLink="/frage6">Nächste Frage</button>
-    <button routerLink="/frage4" style="margin-left: 10px">Vorherige Frage</button>
+    <button routerLink="/frage7">Nächste Frage</button>
+    <button routerLink="/frage5" style="margin-left: 10px">Vorherige Frage</button>
     <button routerLink="/frage1" style="margin-left: 10px">Erste Frage</button>
   </p>
 
 </form>
 <pre id="lösung" style="display: none">
 
-wird beim compelieren zu javascript, unterstützt objektorientierte programmierung und typsicherheit
-(klassen, vererbung, polymorphie, interfaces, enums, generics statische und dynamische datentypen)
+basiert auf ECMAscript,  wird verwendet, um serverseitig zu programmieren (backend)
+wird verwendet, um javascript/ECMA script code außerhalb des browsers auszuführen,
+optimiert für SKALIERBARE Netzwerkanwendungen, integrierter webserver
+enthält paketmanager npm
 
 </pre>
 
