--- a/src/app/fragen/frage12/frage3.component.html
+++ b/src/app/fragen/frage12/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage12:
-nenne alle NICHTelementaren Datentypen von Typescript
+Frage12: nenne alle NICHTelementaren Datentypen von Typescript
 <br>
 <br>
 <form>
