--- a/src/app/fragen/frage13/frage3.component.html
+++ b/src/app/fragen/frage13/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage13:
-kann man in Typescript Strings mit == != === !=== usw vergleichen?
+Frage13: kann man in Typescript Strings mit == != === !=== usw vergleichen?
 <br>
 <br>
 <form>
