--- a/src/app/fragen/frage14/frage3.component.html
+++ b/src/app/fragen/frage14/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage14:
-Was ist ein Template String?
+Frage14: Was ist ein Template String?
 <br>
 <br>
 <form>
