--- a/src/app/fragen/frage16/frage3.component.html
+++ b/src/app/fragen/frage16/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage16:
-erkläre die Unterschiede zwischen den Datentypen object und any
+Frage16: erkläre die Unterschiede zwischen den Datentypen object und any
 <br>
 <br>
 <form>
