--- a/src/app/fragen/frage17/frage3.component.html
+++ b/src/app/fragen/frage17/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage17:
-gebe ein Beispiel für ein Dynamisch typisiertes Array in Typescript
+Frage17: gebe ein Beispiel für ein Dynamisch typisiertes Array in Typescript
 <br>
 <br>
 <form>
