--- a/src/app/fragen/frage18/frage3.component.html
+++ b/src/app/fragen/frage18/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage18:
-gebe zwei Beispiele für ein statisch typisiertes Array in Typescript
+Frage18: gebe zwei Beispiele für ein statisch typisiertes Array in Typescript
 <br>
 <br>
 <form>
