--- a/src/app/fragen/frage19/frage3.component.html
+++ b/src/app/fragen/frage19/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage19:
-erkläre, was ein Tupel ist und gib ein Beispiel
+Frage19: erkläre, was ein Tupel ist und gib ein Beispiel
 <br>
 <br>
 <form>
