--- a/src/app/fragen/frage2/frage1.component.html
+++ b/src/app/fragen/frage2/frage1.component.html
@@ -19,7 +19,8 @@ Frage2: Zeichne dynamische webseiten:
 
 </form>
 <pre id="lösung" style="display: none">
-  ablauf: client fordert HTTP request per URL, bekommt HTML page als response, daten aus DB</pre>
+  ablauf: client fordert HTTP request per URL, bekommt HTML page als response, daten aus DB
+</pre>
 
 
 <div style="display: block"></div>
