--- a/src/app/fragen/frage20/frage3.component.html
+++ b/src/app/fragen/frage20/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage20:
-erkläre, was ein assoziatives Array ist und gib ein Beispiel
+Frage20: erkläre, was ein assoziatives Array ist und gib ein Beispiel
 <br>
 <br>
 <form>
