--- a/src/app/fragen/frage21/frage3.component.html
+++ b/src/app/fragen/frage21/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage21:
-gebe ein Beispiel für die deklaration und aufruf einer enum
+Frage21: gebe ein Beispiel für die deklaration und aufruf einer enum
 <br>
 <br>
 <form>
