--- a/src/app/fragen/frage22/frage3.component.html
+++ b/src/app/fragen/frage22/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage22:
-gebe Beispiele für die Anwendung der Datentypen null und undefined
+Frage22: gebe Beispiele für die Anwendung der Datentypen null und undefined
 <br>
 <br>
 <form>
