--- a/src/app/fragen/frage23/frage3.component.html
+++ b/src/app/fragen/frage23/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage23:
-gebe Beispiele für die Typumwandlung von string nach number und von number nach string
+Frage23: gebe Beispiele für die Typumwandlung von string nach number und von number nach string
 <br>
 <br>
 <form>
