--- a/src/app/fragen/frage24/frage3.component.html
+++ b/src/app/fragen/frage24/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage24:
-gebe Beispiele für die typkonvertierung von string nach boolean und boolean nach string
+Frage24: gebe Beispiele für die typkonvertierung von string nach boolean und boolean nach string
 <br>
 <br>
 <form>
