--- a/src/app/fragen/frage27/frage3.component.html
+++ b/src/app/fragen/frage27/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage27:
-gebe Beispiele für die Destrukterierung von Arrays und Objekten
+Frage27: gebe Beispiele für die Destrukterierung von Arrays und Objekten
 <br>
 <br>
 <form>
