--- a/src/app/fragen/frage28/frage3.component.html
+++ b/src/app/fragen/frage28/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage28:
-gebe Beispiele für den spread operator, mit dem man Arrays zusammenführen kann
+Frage28: gebe Beispiele für den spread operator, mit dem man Arrays zusammenführen kann
 <br>
 <br>
 <form>
