--- a/src/app/fragen/frage29/frage3.component.html
+++ b/src/app/fragen/frage29/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage29:
-schreibe eine einfache typescript klasse, mit optionalem attribut, readonly attribut und konstruktor.
+Frage29: schreibe eine einfache typescript klasse, mit optionalem attribut, readonly attribut und konstruktor.
 gebe weiterhin die verkürzte schreibweise für einen construktor an
 <br>
 <br>
