--- a/src/app/fragen/frage31/frage3.component.html
+++ b/src/app/fragen/frage31/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage31:
-gebe ein paar Beispiele für vordefinierte Methoden der Basisklasse object (wichtig object klein, Object vermeiden)
+Frage31: gebe ein paar Beispiele für vordefinierte Methoden der Basisklasse object (wichtig object klein, Object vermeiden)
 <br>
 <br>
 <form>
