--- a/src/app/fragen/frage33/frage3.component.html
+++ b/src/app/fragen/frage33/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage33:
-nenne die Unterschiede von Typescript Klassen und Java Klassen
+Frage33: nenne die Unterschiede von Typescript Klassen und Java Klassen
 <br>
 <br>
 <form>
