--- a/src/app/fragen/frage34/frage3.component.html
+++ b/src/app/fragen/frage34/frage3.component.html
@@ -1,8 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage34:
-schreibe eine beispiel function fürs addieren zweier werte <br>
-schreibe dann noch 3 functions mit jeweils 1 optionalem parameter, 1 default parameter und 1 rest parameter
+Frage34: schreibe eine beispiel function fürs addieren zweier werte schreibe dann noch 3 functions mit jeweils 1 optionalem parameter, 1 default parameter und 1 rest parameter
 <br>
 <br>
 <form>
