--- a/src/app/fragen/frage6/frage3.component.html
+++ b/src/app/fragen/frage6/frage3.component.html
@@ -1,7 +1,7 @@
 <h1>KAPITEL GRUNDLAGEN:</h1>
 <br>
 
-Frage6: Was ist Nodejs?
+Frage6: Was ist Nodejs? nenne vorteile von nodejs
 <br>
 <br>
 <form>
@@ -24,6 +24,9 @@ basiert auf ECMAscript,  wird verwendet, um serverseitig zu programmieren (backe
 wird verwendet, um javascript/ECMA script code außerhalb des browsers auszuführen,
 optimiert für SKALIERBARE Netzwerkanwendungen, integrierter webserver
 enthält paketmanager npm
+
+  vorteile: Schnelle Restful Webservice implementation durch Express, Packagemanagement, Rapid Prototyping
+
 
 </pre>
 
