--- a/src/app/fragen/frage15/frage3.component.html
+++ b/src/app/fragen/frage15/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage15:
-erkläre in eigenen worten den Datentyp any
+Frage15: erkläre in eigenen worten den Datentyp any
 <br>
 <br>
 <form>
