--- a/src/app/fragen/frage25/frage3.component.html
+++ b/src/app/fragen/frage25/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage25:
-gebe ein Beispiel für einen typecast
+Frage25: gebe ein Beispiel für einen typecast
 <br>
 <br>
 <form>
