--- a/src/app/fragen/frage30/frage3.component.html
+++ b/src/app/fragen/frage30/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage30:
-gebe ein Beispiel für Getter und Setter
+Frage30: gebe ein Beispiel für Getter und Setter
 <br>
 <br>
 <form>
