--- a/src/app/fragen/frage37/frage3.component.html
+++ b/src/app/fragen/frage37/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage30:
-gebe ein Beispiel für Getter und Setter
+Frage37: erkläre union types und gebe ein beispiel in typescript
 <br>
 <br>
 <form>
@@ -12,34 +11,35 @@ gebe ein Beispiel für Getter und Setter
   <br>
   <button type="button" (click)="removelsg()">Lösung verbergen</button>
   <p>
-    <button routerLink="/frage31">Nächste Frage</button>
-    <button routerLink="/frage29" style="margin-left: 10px">Vorherige Frage</button>
+    <button routerLink="/frage38">Nächste Frage</button>
+    <button routerLink="/frage36" style="margin-left: 10px">Vorherige Frage</button>
     <button routerLink="/frage1" style="margin-left: 10px">Erste Frage</button>
   </p>
 
 </form>
 <pre id="lösung" style="display: none">
 
-class Professor{{'{'}}
-  private _raum: string; // _ muss vor die variable, damit kein namenskonflikt mit der get methode raum() entsteht
+auflistung von mehreren datentypen, getrennt durch |, kann in variablen, für unterschiedliche, oder gleiche datebntypen verwendet werden.
+  beispiel gleicher datentyp:
+  let geschlecht: 'm' |'w' |'d'; //strings
+  let anoNote: 1.0 | 1.3 | 1.7 | 2.0 | 2.3 | 2.7 | 3.0 | 3.3 | 3.7 | 4.0 | 5.0; // numbers
 
-  constructor(public vorname:string, public nachname:string, raum?:string){{'{'}}
-  this._raum=raum;
+  Funktionsdefinition mit Union Type und Generic:
+function maxi2<{{'T extends (number | string)'}}>(x: T, y: T): T {{'{'}} //unterschiedliche datentypen, geht auch mit null und undefined
+  return x > y ? x : y;
+}
+
+  class Professor {{'{'}}
+  vorname: string;
+  nachname: string;
+  kuerzel: string|null;
+  constructor(vorname: string, nachname: string, kuerzel: string|null = null) {{'{'}}
+this.vorname = vorname;
+this.nachname = nachname;
+this.kuerzel = kuerzel;
+}
   }
 
-  get raum():string{{'{'}}
-  return this._raum; / return `Raum ${{'{'}} this._raum}`;  // rechts mit template string
-  }
-
-  set raum(neuerRaum: string){{'{'}}
-  this._raum=neuerRaum;
-  }
-  }
-
-  verwendung der getter und setter:
-  let specht:Professor=new Professor("Thomas", "Specht", "109");
-  specht.raum="10000"; // dies ruft den setter auf und ändert den wert
-  document.body.innerHTML=specht.raum; // dies ruft den getter auf, also kommt in das DOM der neue Wert "10000"
 
 
 
