--- a/src/app/fragen/frage38/frage3.component.html
+++ b/src/app/fragen/frage38/frage3.component.html
@@ -1,7 +1,6 @@
 <h1>KAPITEL TYPESCRIPT:</h1>
 <br>
-Frage30:
-gebe ein Beispiel für Getter und Setter
+Frage38: erkläre typ aliase und gebe ein beispiel
 <br>
 <br>
 <form>
@@ -12,34 +11,23 @@ gebe ein Beispiel für Getter und Setter
   <br>
   <button type="button" (click)="removelsg()">Lösung verbergen</button>
   <p>
-    <button routerLink="/frage31">Nächste Frage</button>
-    <button routerLink="/frage29" style="margin-left: 10px">Vorherige Frage</button>
+    <button routerLink="/frage39">Nächste Frage</button>
+    <button routerLink="/frage37" style="margin-left: 10px">Vorherige Frage</button>
     <button routerLink="/frage1" style="margin-left: 10px">Erste Frage</button>
   </p>
 
 </form>
 <pre id="lösung" style="display: none">
 
-class Professor{{'{'}}
-  private _raum: string; // _ muss vor die variable, damit kein namenskonflikt mit der get methode raum() entsteht
+ermöglicht eigene datentypen
+  syntax:
+  type aliasname = typdefinition
 
-  constructor(public vorname:string, public nachname:string, raum?:string){{'{'}}
-  this._raum=raum;
-  }
-
-  get raum():string{{'{'}}
-  return this._raum; / return `Raum ${{'{'}} this._raum}`;  // rechts mit template string
-  }
-
-  set raum(neuerRaum: string){{'{'}}
-  this._raum=neuerRaum;
-  }
-  }
-
-  verwendung der getter und setter:
-  let specht:Professor=new Professor("Thomas", "Specht", "109");
-  specht.raum="10000"; // dies ruft den setter auf und ändert den wert
-  document.body.innerHTML=specht.raum; // dies ruft den getter auf, also kommt in das DOM der neue Wert "10000"
+  beispiel:
+  type note = 1.0|1.3|1.7;
+  let annonote:note = 1.7;
+  type nullablestring = string|null;
+  let raum: nullablestring;
 
 
 
